frontend/test/should_fail/index_isin_edge_missing_where_index_expected.grg
#using "index_count_edge_model.gm"

rule i(ref s:set<enu>) {
	-e:E->;
	
	if{ isInEdgesFromIndex(e, s); }
	
	modify {
	}
}
